Flexbox wrap corrected for Safari browser

--- a/css/main.css
+++ b/css/main.css
@@ -75,7 +75,7 @@ p{
 .navbar {
     display: -webkit-flex;
     display:         flex;
-    -webkit-flex-flow: row;
+    -webkit-flex-flow: row wrap;
             flex-flow: row wrap;
 }
 
@@ -104,7 +104,7 @@ p{
 .navbar {
     display: -webkit-flex;
     display:         flex;
-    -webkit-flex-flow: row;
+    -webkit-flex-flow: row wrap;
             flex-flow: row wrap;
 }
 
